fix footer pictures alignment

--- a/hemsidan/Millionare project/css/info.css
+++ b/hemsidan/Millionare project/css/info.css
@@ -88,7 +88,6 @@ p {
     img {
       width: 50%;
       height: 50%;
-      margin-top: 30px;
    }
    
    
